Переход на внутренние средста работы с бд, с целью упрощения их дальнейшей обработки.

--- a/ReadersAccountingClient/App.config
+++ b/ReadersAccountingClient/App.config
@@ -5,6 +5,11 @@
             <section name="WindowsFormsApp1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    <connectionStrings>
+        <add name="WindowsFormsApp1.Properties.Settings.LibraryConnectionString"
+            connectionString="Data Source=DESKTOP-TALDCKN;Initial Catalog=Library;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
@@ -18,6 +23,9 @@
             </setting>
             <setting name="Wireless" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="ConnectionString" serializeAs="String">
+                <value>Data Source=DESKTOP-TALDCKN;Initial Catalog=Library;Integrated Security=True</value>
             </setting>
         </WindowsFormsApp1.Properties.Settings>
     </userSettings>
