Адаптация под другую БД и дополнительные исправления

--- a/ReadersAccountingClient/App.config
+++ b/ReadersAccountingClient/App.config
@@ -6,8 +6,8 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="WindowsFormsApp1.Properties.Settings.LibraryConnectionString"
-            connectionString="Data Source=DESKTOP-TALDCKN;Initial Catalog=Library;Integrated Security=True"
+        <add name="WindowsFormsApp1.Properties.Settings.Library451ConnectionString"
+            connectionString="Data Source=DESKTOP-TALDCKN;Initial Catalog=Library451;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
@@ -25,7 +25,7 @@
                 <value>False</value>
             </setting>
             <setting name="ConnectionString" serializeAs="String">
-                <value>Data Source=DESKTOP-TALDCKN;Initial Catalog=Library;Integrated Security=True</value>
+                <value>Data Source=DESKTOP-TALDCKN;Initial Catalog=Library451;Integrated Security=True</value>
             </setting>
         </WindowsFormsApp1.Properties.Settings>
     </userSettings>
