--- a/ReadersAccountingClient/ReadersAccountingClient.csproj
+++ b/ReadersAccountingClient/ReadersAccountingClient.csproj
@@ -46,10 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LibraryDataSet.Designer.cs">
+    <Compile Include="Library451DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>LibraryDataSet.xsd</DependentUpon>
+      <DependentUpon>Library451DataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -81,16 +81,16 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="LibraryDataSet.xsc">
-      <DependentUpon>LibraryDataSet.xsd</DependentUpon>
+    <None Include="Library451DataSet.xsc">
+      <DependentUpon>Library451DataSet.xsd</DependentUpon>
     </None>
-    <None Include="LibraryDataSet.xsd">
+    <None Include="Library451DataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>LibraryDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>Library451DataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="LibraryDataSet.xss">
-      <DependentUpon>LibraryDataSet.xsd</DependentUpon>
+    <None Include="Library451DataSet.xss">
+      <DependentUpon>Library451DataSet.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
