--- a/ReadersAccountingClient/ReadersAccountingClient.csproj
+++ b/ReadersAccountingClient/ReadersAccountingClient.csproj
@@ -61,11 +61,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddBook_Form.cs">
+    <Compile Include="AddBookForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddBook_Form.Designer.cs">
-      <DependentUpon>AddBook_Form.cs</DependentUpon>
+    <Compile Include="AddBookForm.Designer.cs">
+      <DependentUpon>AddBookForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReaderAddForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReaderAddForm.Designer.cs">
+      <DependentUpon>ReaderAddForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Library451DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -78,23 +84,26 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DB_Settings_Form.cs">
+    <Compile Include="DBSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DB_Settings_Form.Designer.cs">
-      <DependentUpon>DB_Settings_Form.cs</DependentUpon>
+    <Compile Include="DBSettingsForm.Designer.cs">
+      <DependentUpon>DBSettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <EmbeddedResource Include="AddBook_Form.resx">
-      <DependentUpon>AddBook_Form.cs</DependentUpon>
+    <EmbeddedResource Include="AddBookForm.resx">
+      <DependentUpon>AddBookForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReaderAddForm.resx">
+      <DependentUpon>ReaderAddForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DB_Settings_Form.resx">
-      <DependentUpon>DB_Settings_Form.cs</DependentUpon>
+    <EmbeddedResource Include="DBSettingsForm.resx">
+      <DependentUpon>DBSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
