--- a/ReadersAccountingClient/App.config
+++ b/ReadersAccountingClient/App.config
@@ -27,6 +27,12 @@
             <setting name="ConnectionString" serializeAs="String">
                 <value>Data Source=DESKTOP-TALDCKN;Initial Catalog=Library451;Integrated Security=True</value>
             </setting>
+            <setting name="login" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="password" serializeAs="String">
+                <value />
+            </setting>
         </WindowsFormsApp1.Properties.Settings>
     </userSettings>
 </configuration>
