--- a/ReadersAccountingClient/Properties/Settings.settings
+++ b/ReadersAccountingClient/Properties/Settings.settings
@@ -22,5 +22,11 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=DESKTOP-TALDCKN;Initial Catalog=Library451;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="login" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="password" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
