--- a/ReadersAccountingClient/ReadersAccountingClient.csproj
+++ b/ReadersAccountingClient/ReadersAccountingClient.csproj
@@ -61,23 +61,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddBookForm.cs">
+    <Compile Include="Forms\AddBookForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddBookForm.Designer.cs">
+    <Compile Include="Forms\AddBookForm.Designer.cs">
       <DependentUpon>AddBookForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddDebtForm.cs">
+    <Compile Include="Forms\AddDebtForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddDebtForm.Designer.cs">
+    <Compile Include="Forms\AddDebtForm.Designer.cs">
       <DependentUpon>AddDebtForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Functions.cs" />
-    <Compile Include="ReaderAddForm.cs">
+    <Compile Include="Forms\ReaderAddForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ReaderAddForm.Designer.cs">
+    <Compile Include="Forms\ReaderAddForm.Designer.cs">
       <DependentUpon>ReaderAddForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Library451DataSet.Designer.cs">
@@ -85,34 +85,34 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Library451DataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.cs">
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DBSettingsForm.cs">
+    <Compile Include="Forms\DBSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DBSettingsForm.Designer.cs">
+    <Compile Include="Forms\DBSettingsForm.Designer.cs">
       <DependentUpon>DBSettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <EmbeddedResource Include="AddBookForm.resx">
+    <EmbeddedResource Include="Forms\AddBookForm.resx">
       <DependentUpon>AddBookForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddDebtForm.resx">
+    <EmbeddedResource Include="Forms\AddDebtForm.resx">
       <DependentUpon>AddDebtForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ReaderAddForm.resx">
+    <EmbeddedResource Include="Forms\ReaderAddForm.resx">
       <DependentUpon>ReaderAddForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DBSettingsForm.resx">
+    <EmbeddedResource Include="Forms\DBSettingsForm.resx">
       <DependentUpon>DBSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
