--- a/ReadersAccountingClient/App.config
+++ b/ReadersAccountingClient/App.config
@@ -9,6 +9,9 @@
         <add name="WindowsFormsApp1.Properties.Settings.Library451ConnectionString"
             connectionString="Data Source=DESKTOP-TALDCKN;Initial Catalog=Library451;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="WindowsFormsApp1.Properties.Settings.Library451DWHConnectionString"
+            connectionString="Data Source=DESKTOP-TALDCKN;Initial Catalog=Library451DWH;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
