--- a/ReadersAccountingClient/ReadersAccountingClient.csproj
+++ b/ReadersAccountingClient/ReadersAccountingClient.csproj
@@ -97,6 +97,11 @@
     <Compile Include="Forms\DBSettingsForm.Designer.cs">
       <DependentUpon>DBSettingsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Library451DWHDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Library451DWHDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
@@ -134,6 +139,17 @@
     </None>
     <None Include="Library451DataSet.xss">
       <DependentUpon>Library451DataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Library451DWHDataSet.xsc">
+      <DependentUpon>Library451DWHDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Library451DWHDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Library451DWHDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Library451DWHDataSet.xss">
+      <DependentUpon>Library451DWHDataSet.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
