connection string fix

--- a/ReadersAccountingClient/App.config
+++ b/ReadersAccountingClient/App.config
@@ -36,6 +36,9 @@
             <setting name="password" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DWH_ConnectionString" serializeAs="String">
+                <value>Data Source=DESKTOP-TALDCKN;Initial Catalog=Library451DWH;Integrated Security=True</value>
+            </setting>
         </WindowsFormsApp1.Properties.Settings>
     </userSettings>
 </configuration>
