--- a/ReadersAccountingClient/ReadersAccountingClient.csproj
+++ b/ReadersAccountingClient/ReadersAccountingClient.csproj
@@ -7,11 +7,12 @@
     <ProjectGuid>{6412C292-2931-46AC-A00A-19EEFEAC5136}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>WindowsFormsApp1</RootNamespace>
-    <AssemblyName>WindowsFormsApp1</AssemblyName>
+    <AssemblyName>Учет читателей</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -46,6 +46,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>paomedia-small-n-flat-book-bookmark.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.6.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
@@ -78,6 +81,12 @@
     </Compile>
     <Compile Include="Forms\AddDebtForm.Designer.cs">
       <DependentUpon>AddDebtForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AutForm.Designer.cs">
+      <DependentUpon>AutForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Functions.cs" />
     <Compile Include="Forms\ReaderAddForm.cs">
@@ -116,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddDebtForm.resx">
       <DependentUpon>AddDebtForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AutForm.resx">
+      <DependentUpon>AutForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ReaderAddForm.resx">
       <DependentUpon>ReaderAddForm.cs</DependentUpon>
@@ -182,6 +194,10 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="paomedia-small-n-flat-book-bookmark.ico" />
+    <Content Include="png-transparent-bookmark-content-book-cover-book-material-chapter-accroche.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
